# TraceRCA-OTel

./: .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml
src/ingestion/: Dockerfile  README.md  go.mod  go.sum  main.go
src/ingestion/config/: config.go
src/ingestion/handlers/: metrics.go  producer.go  traces.go
src/tracerca/: README.md  main.py  pyproject.toml
src/tracerca/algorithm/: anomaly_detection.py  baseline.py  feature_selection.py  localization.py
src/tracerca/algorithm/feature_selection/: feature_selection.py  strategy.py
src/tracerca/config/: schema.py
src/tracerca/models/: result.py  trace.py  window.py
src/tracerca/storage/: memory.py
