[project]
name = "tracerca-otel"
version = "0.1.0"
description = "Deployable implementation of TraceRCA with OpenTelemetry integration"
authors = [
    {name = "Jared Velasquez"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
